--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,10 @@
-
+@if (ws.notificacion()) {
+  <div
+    class="fixed top-6 left-6 z-50
+           bg-green-600 text-white
+           px-4 py-3 rounded-xl shadow-lg">
+    {{ ws.notificacion()?.mensaje }}
+  </div>
+}
   <router-outlet />
 
